<resources>
    <string name="app_name">LabDay</string>
    <string name="logoDescription" translatable="false">logo</string>
    <string name="double_back_info">Naciśnij ponownie by wyjść</string>
    <string name="pref_file_name">pref</string>
    <string name="pref_api_last_update_id">apiLastUpdateID</string>
    <string name="unable_to_login">Nie można zalogować</string>
    <string name="login_background">login_background</string>
    <string name="login_background_url">https://nkn.gov.pl/wp-content/uploads/2016/11/bud_c-13_pwr.jpg</string>
    <string name="login_card_title">logowanie</string>
    <string name="login_card_login">login:</string>
    <string name="login_card_password">hasło:</string>
    <string name="login_card_login_button">rozpocznij</string>
    <string name="login_card_error_text_holder">TextView</string>
    <string name="login_logo_text">labday</string>
    <string name="loading_animation_desc">loading animation</string>
    <string name="login_failed_empty_fields">Uzupełnij wszystkie pola</string>
    <string name="login_no_internet">Brak połączenia z internetem</string>
    <string name="access_token_field">accessTokenField</string>
    <string name="lab_day_logo">LabDay logo</string>
    <string name="menu_card_icon">Menu card icon</string>
    <string name="menu_title_timetable">Harmonogram</string>
    <string name="menu_title_map">Inne miejsca</string>
    <string name="menu_title_media">Media</string>
    <string name="menu_title_info">Informacje</string>
    <string name="main_menu_card_image">main menu card image</string>
    <string name="timetable_item_image">timetable item image</string>
    <string name="now_chip">Teraz</string>
    <string name="event_image">event image</string>
    <string name="event_info_icon">event info icon</string>
    <string name="room">Sala: %s</string>
    <string name="door">door</string>
    <string name="entrences_info">Wejścia</string>
    <string name="enlarged_image">Enlarged image</string>
    <string name="entrence_info">Drzwi wejściowe</string>
    <string name="map_fragment_bar">Jak trafić</string>
    <string name="places_fragment_bar">POI na kampusie PWR</string>
    <string name="gps_off_prompt">Włącz GPS żebyśmy mogli poprowadzić Cię do celu :)</string>
    <string name="place_image">place image</string>
    <string name="media_fragment_title">Media</string>
    <string name="media_item_image">media item image</string>
    <string name="media_item_title_site">Strona www</string>
    <string name="link_lab_site">http://labday.pwr.edu.pl/</string>
    <string name="link_fb_user">labdaypwr/</string>
    <string name="link_intagram_user">samorzadw3</string>
    <string name="link_yt_id">AfPgl_JgL-Q</string>
    <string name="info_fragment_title">Informacje o aplikacji</string>
    <string name="asi_logo">ASI logo</string>
    <string name="link_asi_logo">http://15.sesja.linuksowa.pl/img/loga/logo-asi.png</string>
    <string name="author_image">author image</string>
    <string name="link_img_kuba">https://i.imgur.com/v9OFFPh.jpg</string>
    <string name="link_img_jan">https://i.imgur.com/JBVuCru.jpg</string>
    <string name="info_asi">Aplikacja stworzona przez:</string>
    <string name="info_authors">Autorzy</string>
    <string name="author_kuba_name">Jakub Dorda</string>
    <string name="author_kuba_info">Android</string>
    <string name="author_jan_name">Jakub Bosak</string>
    <string name="author_jan_info">Backend</string>
    <string name="gh_logo">github logo</string>
    <string name="link_asi">https://www.facebook.com/ASI.PWr/</string>
    <string name="link_gh_kuba">https://github.com/jakdor</string>
    <string name="link_gh_jan">https://github.com/jBosak98</string>
    <string name="event_host_image_desc">event host image</string>
    <string name="no_path_toast">Nie jesteś zapisany na żadną ścieżkę, skontaktuj się z organizatorami</string>
    <string name="orgs_header">Kontakt do organizatorów</string>
    <string name="orgs1_name">Marta Lipka</string>
    <string name="orgs1_info">Koordynator Główny</string>
    <string name="orgs2_name">Katarzyna Legut</string>
    <string name="orgs2_info">Koordynator ds. kontaktu \n- tel. 725210363</string>
    <string name="orgs3_name">Marta Slaczałek</string>
    <string name="orgs3_info">Koordynator ds. wolontariuszy \n- tel. 663852260</string>
    <string name="link_img_org1">https://i.imgur.com/cVG58jz.jpg</string>
    <string name="link_img_org2">https://i.imgur.com/Eex3clP.jpg</string>
    <string name="link_img_org3">https://i.imgur.com/cymVcBe.jpg</string>
</resources>
