<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/event_doors_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:id="@+id/doors_divider_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <ImageView
            android:id="@+id/doors_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/event_info_icon"
            android:src="@drawable/door"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/doors_divider_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/doors_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/entrences_info"
            android:textColor="@color/textBlack"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@+id/doors_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/doors_divider_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/door_card2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/colorImage"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintDimensionRatio="16:10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/door_card1"
            app:layout_constraintTop_toBottomOf="@+id/doors_icon">

            <ImageView
                android:id="@+id/door2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/door" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/door_card1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/colorImage"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintDimensionRatio="16:10"
            app:layout_constraintEnd_toStartOf="@+id/door_card2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doors_icon">

            <ImageView
                android:id="@+id/door1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/door" />

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</layout>
