<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background1"
        android:paddingTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="?attr/actionBarSize"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/info_layout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/materialGrey">

                    <TextView
                        android:id="@+id/info_orgs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/orgs_header"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/colorMenu1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <include
                        android:id="@+id/org1"
                        layout="@layout/info_item"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        app:layout_constraintDimensionRatio="3:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/info_orgs"
                        app:name="@{@string/orgs1_name}"
                        app:info="@{@string/orgs1_info}"
                        app:mediaImgVisible="@{false}"/>

                    <include
                        android:id="@+id/org2"
                        layout="@layout/info_item"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        app:layout_constraintDimensionRatio="3:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/org1"
                        app:name="@{@string/orgs2_name}"
                        app:info="@{@string/orgs2_info}"
                        app:mediaImgVisible="@{false}"/>

                    <include
                        android:id="@+id/org3"
                        layout="@layout/info_item"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="3:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/org2"
                        app:name="@{@string/orgs3_name}"
                        app:info="@{@string/orgs3_info}"
                        app:mediaImgVisible="@{false}"/>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/info_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/materialGrey">

                    <TextView
                        android:id="@+id/info_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/info_asi"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorMenu1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/info_logo"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/asi_logo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="h,3:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/info_title" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/info_layout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/materialGrey">

                    <TextView
                        android:id="@+id/info_authors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/info_authors"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorMenu1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <include
                        android:id="@+id/author_kuba"
                        layout="@layout/info_item"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        app:layout_constraintDimensionRatio="3:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/info_authors"
                        app:name="@{@string/author_kuba_name}"
                        app:info="@{@string/author_kuba_info}"
                        app:mediaImgVisible="@{true}"/>

                    <include
                        android:id="@+id/author_jan"
                        layout="@layout/info_item"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="3:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/author_kuba"
                        app:name="@{@string/author_jan_name}"
                        app:info="@{@string/author_jan_info}"
                        app:mediaImgVisible="@{true}"/>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

        </LinearLayout>

    </ScrollView>

</layout>
